--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@nuxtjs/ionic": "^0.14.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuetify-nuxt-module": "^0.14.1"
   },
   "devDependencies": {
     "@capacitor/cli": "6.0.0"
