--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "gen:sync:run:android": "nuxi generate && cap sync && cap run android"
   },
   "dependencies": {
     "@capacitor/android": "6.0.0",
