--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@nuxtjs/ionic": "^0.14.2",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vuetify-nuxt-module": "^0.14.1"
   },
   "devDependencies": {
     "@capacitor/cli": "6.0.0"
+  },
+  "peerDependencies": {
+    "@stencil/core": "4.18.1"
   }
 }
